--- a/app/assets/stylesheets/new-age.scss
+++ b/app/assets/stylesheets/new-age.scss
@@ -382,48 +382,15 @@ body {
       color: #dd4b39;
     }
 
-    ul.list-social {
-      margin-bottom: 0;
-    }
-
-    ul.list-social li a {
-      font-size: 40px;
-      line-height: 80px;
-      display: block;
-      width: 80px;
-      height: 80px;
-      color: white;
-      border-radius: 100%;
+    a.btn {
+      font-family: initial;
+      letter-spacing: 1px;
     }
 
     @media (min-width: 992px) {
       h2 {
         font-size: $title-large;
       }
-    }
-
-    ul.list-social li.social-twitter a {
-      background-color: #1da1f2;
-    }
-
-    ul.list-social li.social-twitter a:hover {
-      background-color: #0d95e8;
-    }
-
-    ul.list-social li.social-facebook a {
-      background-color: #3b5998;
-    }
-
-    ul.list-social li.social-facebook a:hover {
-      background-color: #344e86;
-    }
-
-    ul.list-social li.social-google-plus a {
-      background-color: #dd4b39;
-    }
-
-    ul.list-social li.social-google-plus a:hover {
-      background-color: #d73925;
     }
   }
 
