--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -39,6 +39,10 @@
           <p class="text-muted small mb-5"><%= t('.free_plan_note_html') %></p>
         <% end %>
 
+        <div class="text-center">
+          <%= render partial: 'shared/share_buttons' %>
+        </div>
+
         <div id="chart-container" class="mb-5"></div>
 
         <div id="search-response"></div>
