--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -151,20 +151,7 @@
     <div class="container">
       <h2><%= t('.contact.title_html') %></h2>
       <div class="mb-5"><%= t('.contact.text_html') %></div>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a class="btn btn-primary text-white" href="https://twitter.com/egotter_cs" target="_blank">
-            <i class="fab fa-twitter"></i>
-            <%= t('.contact.account') %>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-primary text-white" href="http://twitter.com/share" target="_blank">
-            <i class="fab fa-twitter"></i>
-            <%= t('.contact.tweet') %>
-          </a>
-        </li>
-      </ul>
+      <%= render partial: 'shared/share_buttons' %>
     </div>
   </section>
 </div>
