--- a/app/views/shared/_share_buttons.html.erb
+++ b/app/views/shared/_share_buttons.html.erb
@@ -6,7 +6,7 @@
     </a>
   </li>
   <li class="list-inline-item">
-    <a class="btn btn-primary text-white" href="http://twitter.com/share" target="_blank">
+    <a class="btn btn-primary text-white" href="http://twitter.com/share?url=<%= request.original_url %>" target="_blank">
       <i class="fab fa-twitter"></i>
       <%= t('.tweet') %>
     </a>
