--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -139,11 +139,18 @@
       <h4 class="mb-3"><%= t('.faq.q1', app: t('app_name')) %></h4>
       <div class="mb-5"><%= t('.faq.a1', app: t('app_name')) %></div>
       <hr class="mb-5">
+
       <h4 class="mb-3"><%= t('.faq.q2', app: t('app_name')) %></h4>
       <div class="mb-5"><%= t('.faq.a2', app: t('app_name')) %></div>
       <hr class="mb-5">
+
       <h4 class="mb-3"><%= t('.faq.q3', app: t('app_name')) %></h4>
       <div class="mb-5"><%= t('.faq.a3_html', app: t('app_name')) %></div>
+      <hr class="mb-5">
+
+      <h4 class="mb-3"><%= t('.faq.q4') %></h4>
+      <div class="mb-5"><%= t('.faq.a4_html') %></div>
+      <hr class="mb-5">
     </div>
   </section>
 
